src/test/funciones/error_return_tipo.cps
// ❌ Tipo de retorno incompatible con la firma.
function h(): integer {
  return true; // error: se esperaba integer, se encontró boolean
}
